Bug 407278 - safe assert
Summary: safe assert
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Colorize (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-06 22:28 UTC by Jasper
Modified: 2019-05-08 07:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace of crash (9.80 KB, text/plain)
2019-05-06 23:35 UTC, Jasper
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jasper 2019-05-06 22:28:02 UTC
SUMMARY


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Tiar 2019-05-06 22:40:24 UTC
Can you please provide more information? According to the template shown in the first comment.
Comment 2 Jasper 2019-05-06 23:33:06 UTC
SUMMARY
When using the Colorize Mask tool the latest version of Krita(#2e600f3) crashes. This bug was probably introduced by #56a13166.

STEPS TO REPRODUCE
1. Open Krita
2. Create new file
3. Select Colorize Mask Editing Tool
4. Click somewhere on the image

OBSERVED RESULT
The program crashes.

EXPECTED RESULT
The colorized mask is used as normal.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kernel: 5.0.7-rt5-MANJARO
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.57.0
Qt Version: 5.12.3

ADDITIONAL INFORMATION
Git hash of krita source: #2e600f3

Error code:
SAFE ASSERT (krita): "m_d->selection" in file /home/jasper/Projects/krita/src/libs/image/kis_mask.cc, line 228
Comment 3 Jasper 2019-05-06 23:35:10 UTC
Created attachment 119877 [details]
backtrace of crash
Comment 4 Halla Rempt 2019-05-07 06:53:13 UTC
No, that commit cannot be related to this assert. I also cannot reproduce this assert either, it must be some kind of timing issue where the mask isn't created in time for the image update.
Comment 5 Dmitry Kazakov 2019-05-08 07:46:54 UTC
Git commit 588cc0088e70018c802b9122609466b9262c6317 by Dmitry Kazakov.
Committed on 07/05/2019 at 20:14.
Pushed by dkazakov into branch 'master'.

Fix assert in KisMask when image has Colorize Masks

(these masks don't have selections)

M  +5    -5    libs/image/kis_mask.cc

https://invent.kde.org/kde/krita/commit/588cc0088e70018c802b9122609466b9262c6317