Fix assert in KisMask when image has Colorize Masks

(these masks don't have selections)

BUG:407278